<resources>
    <string name="app_name">Amazing Wallpaper</string>
    <string name="latest">Latest</string>
    <string name="title_activity_actlatest">ACTLatest</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Amazing Wallpaper in your way</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="category">Category</string>
    <string name="gifs">GIFs</string>
    <string name="myfavorites">My Favorites</string>
    <string name="rateapp">Rate App</string>
    <string name="aboutapp">About app</string>
    <string name="moreapp">More App</string>
    <string name="setting">Setting</string>
    <string name="privacypolice">Privacy Police</string>
</resources>

